# TrailCurrentPicket

./: .gitignore  CMakeLists.txt  README.md  build-all.sh
CAD/: CutBoardOutline.nc  TrailCurrentPicketModuleEDA.FCStd  TrailCurrentPicketModuleHousing.FCStd
DOCS/Requirements/: high-level-requirements.md
EDA/TrailCurrentPicketModule/: TrailCurrentPicketModule.kicad_pcb  TrailCurrentPicketModule.kicad_prl  TrailCurrentPicketModule.kicad_pro  TrailCurrentPicketModule.kicad_sch
main/: CMakeLists.txt  discovery.c  main.c  ota.c
src/: main.cpp
